# trading_backtester

./: .gitignore  README.md  pyproject.toml  setup.cfg  simulation_config.yml
backtester/: .gitignore  README.md  __init__.py  changelog.md  requirements.txt  run_simulation.py  runner.py  simulation_config.yml.example
backtester/configs/: migration_config.yml.example
backtester/scripts/: README.md  run_migration.py
backtester/system/: artifact_manager.py  config_loader.py  data_provider.py  execution_engine.py  interfaces.py  main.py  portfolio.py  signal_generator.py  strategy.py
backtester/system/common/: lot_size.csv  schema.py
backtester/system/ingestion/: migrator.py
backtester/trade_log_validator/: README.md  __init__.py  functional_main.py
backtester/trade_log_validator/checks/: business_rules.py  data_integrity.py  market_data.py  registry.py
backtester/trade_log_validator/core/: exceptions.py  logger.py  orchestrator.py
backtester/trade_log_validator/data/: loaders.py  schemas.py
backtester/trade_log_validator/models/: api_models.py  check_result.py  enums.py
backtester/trade_log_validator/reporting/: generator.py
backtester/trade_log_validator/services/: orb_client.py
backtester/trade_log_validator/utils/: orb_utils.py
migrator/: migration_config.yml
strategies/multi_tf_ema_fast/: multi_tf_ema_fast.py  multi_tf_ema_fast.yml
strategies/nifty_options/: nifty_options_strategy_fast.py  nifty_options_strategy_fast.yml
strategies/pair_trader/: pair_trader_1.yml  pair_trader_fast.py
strategies/rsi_ema_mtf/: rsi_ema_mtf.py  rsi_ema_mtf.yml
