[metadata]
name = backtester
version = 0.1.0
description = Configuration-driven backtesting framework for trading strategies
python_requires = >=3.10

[options]
packages = find:
include_package_data = True

[options.packages.find]
include = backtester*

[options.package_data]
backtester =
    *.yml
    **/*.yml

[options.entry_points]
console_scripts =
    backtester-run = backtester.run_simulation:main
    backtester-migrate = backtester.scripts.run_migration:main
